calculate aMuon in all FlexibleEFTHiggs models

--- a/model_files/E6SSMEFTHiggs/FlexibleSUSY.m.in
+++ b/model_files/E6SSMEFTHiggs/FlexibleSUSY.m.in
@@ -185,3 +185,8 @@ DefaultPoleMassPrecision = HighPrecision;
 HighPoleMassPrecision    = {hh, Ah, Hpm};
 MediumPoleMassPrecision  = {};
 LowPoleMassPrecision     = {};
+
+ExtraSLHAOutputBlocks = {
+   {FlexibleSUSYLowEnergy,
+           {{21, FlexibleSUSYObservable`aMuon} } }
+};
