--- a/model_files/NMSSMEFTHiggs/FlexibleSUSY.m.in
+++ b/model_files/NMSSMEFTHiggs/FlexibleSUSY.m.in
@@ -127,6 +127,8 @@ ExtraSLHAOutputBlocks = {
            {{0, Hold[HighScale]},
             {1, Hold[SUSYScale]},
             {2, Hold[LowScale]} } },
+   {FlexibleSUSYLowEnergy,
+           {{21, FlexibleSUSYObservable`aMuon} } },
    {ALPHA, {{ArcSin[Pole[ZH[2,2]]]}}},
    {HMIX , {{2, vu / vd},
             {3, Sqrt[vu^2 + vd^2]},
