--- a/model_files/MRSSMEFTHiggs/FlexibleSUSY.m.in
+++ b/model_files/MRSSMEFTHiggs/FlexibleSUSY.m.in
@@ -90,3 +90,8 @@ DefaultPoleMassPrecision = HighPrecision;
 HighPoleMassPrecision    = {hh, Ah, Hpm};
 MediumPoleMassPrecision  = {};
 LowPoleMassPrecision     = {};
+
+ExtraSLHAOutputBlocks = {
+   {FlexibleSUSYLowEnergy,
+           {{21, FlexibleSUSYObservable`aMuon} } }
+};
