--- a/model_files/MSSMEFTHiggs/FlexibleSUSY.m.in
+++ b/model_files/MSSMEFTHiggs/FlexibleSUSY.m.in
@@ -117,6 +117,8 @@ ExtraSLHAOutputBlocks = {
            {{0, Hold[HighScale]},
             {1, Hold[SUSYScale]},
             {2, Hold[LowScale]} } },
+   {FlexibleSUSYLowEnergy,
+           {{21, FlexibleSUSYObservable`aMuon} } },
    {ALPHA, {{ArcSin[Pole[ZH[2,2]]]}}},
    {HMIX , {{1, \[Mu]},
             {2, vu / vd},
