disable momentum iterations in mass calculations
This is ok as long as no 2-loop O(at^2) contributions are taken into
account in the Higgs pole mass.

--- a/model_files/HSSUSYSQCD/FlexibleSUSY.m.in
+++ b/model_files/HSSUSYSQCD/FlexibleSUSY.m.in
@@ -143,8 +143,8 @@ InitialGuessAtLowScale = {
    {Ye, Automatic}
 };
 
-DefaultPoleMassPrecision = HighPrecision;
-HighPoleMassPrecision    = {hh};
+DefaultPoleMassPrecision = MediumPrecision;
+HighPoleMassPrecision    = {};
 MediumPoleMassPrecision  = {};
 LowPoleMassPrecision     = {};
 
