implement \Delta \lambda^(3L) in degenerate case

--- a/model_files/HSSUSYSQCD/FlexibleSUSY.m.in
+++ b/model_files/HSSUSYSQCD/FlexibleSUSY.m.in
@@ -113,6 +113,7 @@ HighScaleInput = {
                              ]
                       ), 0]
                     + 0 If[TwoLoopAtauAtau >= 1, lambda2LHSSTau, 0]
+                    + If[LambdaLoopOrder >= 3, lambda3LATASASDegenerate, 0]
                 )
     }
 };
