--- a/config/flexiblesusy-config.in
+++ b/config/flexiblesusy-config.in
@@ -29,6 +29,7 @@ himalayalibs="@HIMALAYALIBS@"
 lapacklibs="@LAPACKLIBS@"
 ldflags="@LDFLAGS@"
 ldlibs="@LDLIBS@"
+lllibs="@LLLIBS@"
 loopfuncflags="@LOOPFUNCFLAGS@"
 loopfunclibs="@LOOPFUNCLIBS@"
 math="@MATH@"
@@ -151,6 +152,7 @@ Options:
   --ldflags             Print flags for optional libraries, LDFLAGS
   --ldlibs              Print optional libraries, LDLIBS
   --libs                Print all libraries linked to an executable
+  --lllibs              Print flags for LibraryLink libraries, LLLIBS
   --loopfuncflags       Print compiler flags for loop function library, LOOPFUNCFLAGS
   --loopfunclibs        Print loop function libraries, LOOPFUNCLIBS
   --math-cmd            Print Mathematica kernel command, MATH
@@ -207,6 +209,7 @@ while test $# -gt 0; do
         --ldflags)               out="$out $ldflags" ;;
         --ldlibs)                out="$out $ldlibs" ;;
         --libs)                  out="$out $libs" ;;
+        --lllibs)                out="$out $lllibs" ;;
         --loopfuncflags)         out="$out $loopfuncflags" ;;
         --loopfunclibs)          out="$out $loopfunclibs" ;;
         --math-cmd)              out="$out $math" ;;
