--- a/config/list_sarah_model_files.sh.in
+++ b/config/list_sarah_model_files.sh.in
@@ -74,13 +74,7 @@ If[files === {},
    files = FindModelFiles["${FLEXIBLESUSY_SARAH_DIR}", modelName, submodeldir];
   ];
 
-strList = "";
-For[i = 1, i <= Length[files], i++,
-    If[i > 1, strList = strList <> " ";];
-    strList = strList <> files[[i]];
-   ];
-
-WriteString["stderr", strList];
+WriteString["stderr", StringJoin[Riffle[files, " "]]];
 
 Quit[];
 EOF
