--- a/config/config.h.in
+++ b/config/config.h.in
@@ -46,6 +46,7 @@
 #define LAPACKLIBS            "@LAPACKLIBS@"
 #define LDFLAGS               "@LDFLAGS@"
 #define LDLIBS                "@LDLIBS@"
+#define LLFLAGS               "@LLFLAGS@"
 #define LLLIBS                "@LLLIBS@"
 #define LOOPFUNCFLAGS         "@LOOPFUNCFLAGS@"
 #define LOOPFUNCLIBS          "@LOOPFUNCLIBS@"
