--- a/templates/standard_model_spectrum_generator_interface.hpp.in
+++ b/templates/standard_model_spectrum_generator_interface.hpp.in
@@ -51,7 +51,9 @@ public:
    std::tuple<@ModelName@_slha<@ModelName@<T>>, standard_model::StandardModel<T>> get_models_slha() const
    { return std::make_tuple(@ModelName@_slha<@ModelName@<T>>(model, settings.get(Spectrum_generator_settings::force_positive_masses) == 0.), eft); }
 
-   @ModelName@<T> get_model() const
+   const @ModelName@<T>& get_model() const
+   { return model; }
+   @ModelName@<T>& get_model()
    { return model; }
    @ModelName@_slha<@ModelName@<T>> get_model_slha() const
    { return @ModelName@_slha<@ModelName@<T>>(model, settings.get(Spectrum_generator_settings::force_positive_masses) == 0.); }
