set default shell to /bin/sh
to resolve the \n and \t characters in test/module.mk used to
generate the .xml file

--- a/config/Makefile.in
+++ b/config/Makefile.in
@@ -96,6 +96,9 @@ ALLTST   :=
 # the addons add libraries to this variable to be linked against executables
 ADDONLIBS:=
 
+# set default shell
+SHELL = /bin/sh
+
 # flexiblesusy-config script
 FSCONFIG := @FSCONFIG@
 
