implement 4-loop SM beta function for the quartic Higgs coupling
lambda from [arxiv:1508.00912].

--- a/model_files/HSSUSY/FlexibleSUSY.m.in
+++ b/model_files/HSSUSY/FlexibleSUSY.m.in
@@ -182,6 +182,7 @@ OnlyLowEnergyFlexibleSUSY = False;
 UseHiggs2LoopSM = True;
 UseHiggs3LoopSM = True;
 UseSM3LoopRGEs = True;
+UseSM4LoopRGEs = True;
 UseYukawa3LoopQCD = True;
 UseSMAlphaS3Loop = True;
 
