--- a/templates/soft_beta_.cpp.in
+++ b/templates/soft_beta_.cpp.in
@@ -112,4 +112,22 @@ typename Eigen::MatrixBase<Derived>::PlainObject operator-(double n, const Eigen
    return beta_@parameterName@;
 }
 
+/**
+ * Calculates the 4-loop beta function of @parameterName@.
+ *
+ * @return 4-loop beta function
+ */
+@parameterType@ @ModelName@_soft_parameters::calc_beta_@parameterName@_4_loop(const Soft_traces& soft_traces) const
+{
+   DEFINE_PROJECTOR(3,3,3,3)
+
+@localDeclFourLoop@
+
+   @parameterType@ beta_@parameterName@;
+
+@betaFourLoop@
+
+   return beta_@parameterName@;
+}
+
 } // namespace flexiblesusy
