add 4-loop contributions to Higgs mass in the SM
from arxiv:1508.00912 Eq.(5.5)

--- a/model_files/SM/FlexibleSUSY.m.in
+++ b/model_files/SM/FlexibleSUSY.m.in
@@ -50,6 +50,7 @@ UseSM3LoopRGEs = True;
 UseSM4LoopRGEs = True;
 UseHiggs2LoopSM = True;
 UseHiggs3LoopSM = True;
+UseHiggs4LoopSM = True;
 UseSMAlphaS3Loop = True;
 
 DefaultPoleMassPrecision = MediumPrecision;
