--- a/templates/librarylink.m.in
+++ b/templates/librarylink.m.in
@@ -64,6 +64,7 @@ fsDefaultSettings = {
       higgs3loopCorrectionAbAsAs -> 1,   (* FlexibleSUSY[27] *)
       higgs3loopCorrectionAtAtAs -> 1,   (* FlexibleSUSY[28] *)
       higgs3loopCorrectionAtAtAt -> 1,   (* FlexibleSUSY[29] *)
+      higgs4loopCorrectionAtAsAsAs -> 1, (* FlexibleSUSY[30] *)
       parameterOutputScale -> 0          (* MODSEL[12] *)
 };
 
@@ -145,6 +146,7 @@ FS@ModelName@OpenHandle[OptionsPattern[]] :=
             OptionValue[higgs3loopCorrectionAbAsAs],
             OptionValue[higgs3loopCorrectionAtAtAs],
             OptionValue[higgs3loopCorrectionAtAtAt],
+            OptionValue[higgs4loopCorrectionAtAsAsAs],
             OptionValue[parameterOutputScale],
 
             (* Standard Model input parameters *)
@@ -222,6 +224,7 @@ FS@ModelName@Set[handle_Integer, p:OptionsPattern[]] :=
             OptionValue[higgs3loopCorrectionAbAsAs],
             OptionValue[higgs3loopCorrectionAtAtAs],
             OptionValue[higgs3loopCorrectionAtAtAt],
+            OptionValue[higgs4loopCorrectionAtAsAsAs],
             OptionValue[parameterOutputScale],
 
             (* Standard Model input parameters *)
