--- a/templates/mass_eigenstates.hpp.in
+++ b/templates/mass_eigenstates.hpp.in
@@ -136,6 +136,7 @@ public:
 @twoLoopSelfEnergyPrototypes@
 @twoLoopTadpolePrototypes@
 @threeLoopSelfEnergyPrototypes@
+@fourLoopSelfEnergyPrototypes@
 @loopMassesPrototypes@
 @runningDRbarMassesPrototypes@
 @dependencePrototypes@
