--- a/model_files/HSSUSY/FlexibleSUSY.m.in
+++ b/model_files/HSSUSY/FlexibleSUSY.m.in
@@ -181,6 +181,7 @@ LowPoleMassPrecision     = {};
 OnlyLowEnergyFlexibleSUSY = False;
 UseHiggs2LoopSM = True;
 UseHiggs3LoopSM = True;
+UseHiggs4LoopSM = True;
 UseSM3LoopRGEs = True;
 UseSM4LoopRGEs = True;
 UseYukawa3LoopQCD = True;
