--- a/templates/run.m.in
+++ b/templates/run.m.in
@@ -31,6 +31,7 @@ handle = FS@ModelName@OpenHandle[
         higgs3loopCorrectionAbAsAs -> 1,   (* FlexibleSUSY[27] *)
         higgs3loopCorrectionAtAtAs -> 1,   (* FlexibleSUSY[28] *)
         higgs3loopCorrectionAtAtAt -> 1,   (* FlexibleSUSY[29] *)
+        higgs4loopCorrectionAtAsAsAs -> 1, (* FlexibleSUSY[30] *)
         parameterOutputScale -> 0          (* MODSEL[12] *)
     },
     fsSMParameters -> {
