adding description of MSSMEFTHiggs model file

--- a/doc/mainpage.dox.in
+++ b/doc/mainpage.dox.in
@@ -47,6 +47,7 @@ Alternatively, the Mathematica interface of FlexibleSUSY may be used:
 \subsection Documentation_Models FlexibleSUSY models
 
 - @ref hssusy
+- @ref mssmefthiggs
 
 \subsection Documentation_Extensions Extensions
 
