adding NUHMSSMNoFVHimalaya sketch

--- a/doc/mainpage.dox.in
+++ b/doc/mainpage.dox.in
@@ -48,6 +48,7 @@ Alternatively, the Mathematica interface of FlexibleSUSY may be used:
 
 - @ref hssusy
 - @ref mssmefthiggs
+- @ref nuhmssmnofvhimalaya
 
 \subsection Documentation_Extensions Extensions
 
