make src independent of the standard_model class

--- a/templates/slha_io.hpp.in
+++ b/templates/slha_io.hpp.in
@@ -94,7 +94,7 @@ public:
    template <class... Ts> void set_spectrum(const std::tuple<Ts...>&);
    template <class Model> void set_spectrum(const @ModelName@_slha<Model>&);
    template <class T> void set_spectrum(const @ModelName@<T>&);
-   void set_spectrum(const standard_model::Standard_model& m) { slha_io.set_spectrum(m); }
+   void set_spectrum(const standard_model::Standard_model&);
    void set_spinfo(const Spectrum_generator_problems&);
    void set_spinfo(const Problems&);
    void set_spinfo(const std::vector<std::string>&, const std::vector<std::string>&);
@@ -123,8 +123,11 @@ private:
    void set_imextpar(const @ModelName@_input_parameters&);
    void set_minpar(const @ModelName@_input_parameters&);
    void set_mass(const @ModelName@_physical&, bool);
+   void set_mass(const standard_model::Standard_model_physical&);
    void set_mixing_matrices(const @ModelName@_physical&, bool);
+   void set_mixing_matrices(const standard_model::Standard_model_physical&);
    template <class Model> void set_model_parameters(const @ModelName@_slha<Model>&);
+   void set_model_parameters(const standard_model::Standard_model&);
    void set_ckm(const Eigen::Matrix<std::complex<double>,3,3>&, double);
    void set_pmns(const Eigen::Matrix<std::complex<double>,3,3>&, double);
    double read_scale() const;
